- add function save emojis

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -29,6 +29,7 @@
 			<button class="button save" id="button-save">Sauvegarder</button>
 		</div>
     </div>
-<script src="options.js"></script>
+	<script src="../utils.js"></script>
+	<script src="options.js"></script>
 </body>
 </html>
