--- a/src/popup.html
+++ b/src/popup.html
@@ -22,6 +22,7 @@
             <button class="button" id="buttonBoost">Boost</button>
         </div>
     </div>
+    <script src="utils.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
