- check on save if total percentage is equal to 1

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -26,6 +26,7 @@
 		</table>
 
 		<div class="flex">
+			<span id="save-error" class="hidden">Le total des pourcentage doit être égale à 100%</span>
 			<button class="button save" id="button-save">Sauvegarder</button>
 		</div>
     </div>
